crates/keron-lang/tests/corpus/errors/check/interpolation_inner_type_error.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `+` requires `Int`, `Double`, or `String` operands, found `String` and `Int`
  --> 1:17
  |
1 | val a = "bad: ${"hello" + 1}"
  |                 ^^^^^^^^^^^
